crates/java-syntax/tests/snapshots/lexer_snapshots__lex_block_comment_only.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
/* this is a 
 block comment */
TOKENS:
BLOCK_COMMENT "/* this is a \n block comment */"
EOF ""

LEX_ERRORS:
<none>
