crates/java-syntax/tests/snapshots/lexer_snapshots__lex_char_literals.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
'a' '\n' '\''
TOKENS:
CHAR_LIT "'a'"
WHITESPACE " "
CHAR_LIT "'\\n'"
WHITESPACE " "
CHAR_LIT "'\\''"

LEX_ERRORS:
<none>
