crates/java-syntax/tests/snapshots/lexer_snapshots__lex_comment_termination_crlf.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
// normal comment 
 int w = 4;
TOKENS:
LINE_COMMENT "// normal comment "
WHITESPACE "\r\n "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "w"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "4"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>
