crates/java-syntax/tests/snapshots/lexer_snapshots__lex_comment_termination_unicode_line_break.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
// hidden comment \u000A int x = 1;
TOKENS:
LINE_COMMENT "// hidden comment "
WHITESPACE "\\u000A "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>
