crates/java-syntax/tests/snapshots/lexer_snapshots__lex_complex_jls_scenario.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
List<String> list = new ArrayList<>();
TOKENS:
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "list"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
IDENTIFIER "ArrayList"
LESS "<"
GREATER ">"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
EOF ""

LEX_ERRORS:
<none>
