crates/java-syntax/tests/snapshots/lexer_snapshots__lex_empty.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:

TOKENS:

LEX_ERRORS:
<none>
